[package]
name = "rs-discord-mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.23.0", features = ["full"] }
ethers = { version = "1.0.2", features = ["ws", "rustls"] }


[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    # "framework",
    "gateway",
    "http",
    "model",
    # "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.11.5"